# property-record-web-scraping

./: .gitignore  LICENSE  MANIFEST.in  PATH_RESOLUTION_FIXES.md  README.md  UNIVERSAL_PATH_RESOLUTION.md  build_and_upload.sh  example_server.py  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
gregoryb/: main.py  requirements.txt
gregoryb/ConfigUtils/: Config.py  config.yaml
gregoryb/LoggingUtils/: Logger.py  ResultLogger.py  __init__.py
gregoryb/LoggingUtils/docs/: todo.md
gregoryb/Logs/docs/: readme.md
gregoryb/Misc/: example_usage.py  get_form_data.py
gregoryb/ScraperUtils/: GetElement.py  RecordScraper.py  Schema.py  __init__.py
path_testing/: run_all_path_tests.py  test_chrome_binaries.py  test_config_only.py  test_download_directory.py  test_logging_directory.py  test_path_resolution.py
src/: .gitignore  app.py  example.py  run_tests.py  temp.json
src/ConfigUtils/: __init__.py
src/ConfigUtils/docs/: todo.md
src/Misc/: img_test.py
src/ScraperUtils/: DataClean.py  Driver.py  PhotoScraper.py  RecordSearch.py
src/api/: app.py
src/config_utils/: Config.py
src/logging_utils/: Logger.py  ResultLogger.py
src/misc/: example_usage.py
src/old/: test_valid_submit_task.py
src/old/api_access/: __init__.py
src/old/misc/: main02.py
src/old/parsing/: __init__.py  json_schema.py
src/parsing/: __init__.py  parse_fields.py
src/parsing/schema/: multi_owner.json
src/property_record_web_scraping/: .gitignore  app.py  run_tests.py
src/property_record_web_scraping/server/: __init__.py  app.py  app2.py  build.py  driver_pool.py  events.py  (+3 more)
src/scraper_utils/: Driver.py  GetElement.py  PhotoScraper.py  RecordScraper.py  RecordSearch.py
src/server/: __init__.py  actions.py  app.py  build.py  driver_pool.py  errors.py  events.py  routes.py  routes2.py  routes3.py  server_cleanup_old.py  task_manager.py  thread_pool.py
src/test/: __init__.py  record_examples.py  test_health.py  test_invalid_submit_task.py  test_submit_task.py  test_tasks.py  test_valid_submit_task.py
(+134 files in other folders)
