[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "property-record-web-scraping"
version = "0.0.4"
authors = [
    { name = "Anonymous", email = "..." },
]
description = "..."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "blinker==1.9.0",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "dnspython==2.7.0",
    "Flask==3.1.1",
    "h11==0.16.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2025.4.1",
    "MarkupSafe==3.0.2",
    "numpy==2.2.5",
    "opencv-python==4.12.0.88",
    "outcome==1.3.0.post0",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "psutil==7.0.0",
    "pybase64==1.4.2",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "pymongo==4.12.1",
    "PySocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "referencing==0.36.2",
    "requests==2.32.3",
    "rpds-py==0.26.0",
    "selenium==4.32.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.7",
    "trio==0.30.0",
    "trio-websocket==0.12.2",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "websocket-client==1.8.0",
    "Werkzeug==3.1.3",
    "wsproto==1.2.0"
]
classifiers = [
    "Programming Language :: Python :: 3.12.3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/TheShanachie/property-record-web-scraping"

[project.scripts]
build = "property-record-web-scraping.src.build:main"
test = "property-record-web-scraping.src.run_test:main"
run_dev = "property-record-web-scraping.src.app:main"

[tool.setuptools.packages]
find = {}

